# langtest

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  accuracy_metrics_demo.ipynb  ali.ipynb  gender-f1-score.ipynb  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: config.yml  ⭐---feature-request.md  🐞---bug-report.md  💡--improvements.md
.github/workflows/: build_and_test.yml  gh_pages.yml  llm_tests_build.yml  release.yaml  requirements.txt
conda/: meta.yaml  requirements.txt
demo/: Editing_TestCases_Notebook.ipynb  accuracy_metrics_demo.ipynb  augmentation_demo.ipynb  demo.ipynb  main.ipynb  modelhandler_demo.ipynb  trial_config.yml
demo/blogposts/: Healthcare_NER_Model_Evaluation_with_LangTest.ipynb  KDnuggets_spacy_workflow.ipynb  README.md
demo/data/: config.yml  config_accuracy.yml  config_fairness.yml  representation.yml  sample.csv  test_short.conll  train.conll
demo/output/: augmenated_train.conll  demo_cases.csv  test_results.csv
demo/tutorials/: AI21_QA_Summarization_Testing_Notebook.ipynb  AI21_QA_Testing_Notebook.ipynb  Azure_OpenAI_QA_Summarization_Testing_Notebook.ipynb  Azure_OpenAI_QA_Testing_Notebook.ipynb  Cohere_QA_Summarization_Testing_Notebook.ipynb  Cohere_QA_Testing_Notebook.ipynb  HuggingFaceHub_QA_Summarization_Testing_Notebook.ipynb  HuggingFaceHub_QA_Testing_Notebook.ipynb  OpenAI_QA_Summarization_Testing_Notebook.ipynb  OpenAI_QA_Testing_Notebook.ipynb
demo/utils/: conll03.py
docs/: CNAME  README.md  _config.yml  footer.html  index.md
docs/_data/: navigation.yml
docs/_includes/: docs-langtest-pagination.html  footer.html  head.html  header.html
docs/_layouts/: docs.html  landing.html  leaderboard.html  page.html
docs/_sass/: custom.scss
docs/_site/: 404.html  feed.xml  index.html  sitemap.xml
docs/api/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  quick_start.html  search.html  searchindex.js
docs/en/: augmentation.md  generate.md  generate_augmentation.md  harness.md  install.md  load.md  quick_start.md  report.md  run.md  save.md  save_augmentation.md  tests.md
docs/en_test/: add_context.md  age_bias.md  bias.md  gender.md  lowercase.md  representation.md  robustness.md  swap_entities.md  test.md  titlecase.md  uppercase.md
docs/leaderboard/: llm.md
docs/sphinx/: conf.py  index.rst  sphinx_requirements.txt
docs/tutorials/: bias_tests.md  tutorials.md  workflow_spacy.md
example/: Automated_Robustness_Testing_Spark_NLP.ipynb
langtest/: Untitled.ipynb  __init__.py  __main__.py  callback.py  config.py  errors.py  langtest.py  leaderboard.py  logger.py  prompts.py  testrunner.py  types.py
langtest/augmentation/: __init__.py  augmenter.py  base.py  debias.py  types.py  utils.py
langtest/datahandler/: dataset_info.py  datasource.py  format.py  utils.py
langtest/embeddings/: __init__.py  huggingface.py  openai.py
langtest/evaluation/: __init__.py
langtest/exceptions/: columns.py  datasets.py
langtest/metrics/: __init__.py  embedding_distance.py  llm_eval.py  prometheus-eval.py  prometheus_eval.py  string_distance.py
langtest/modelhandler/: __init__.py  custom_modelhandler.py  jsl_modelhandler.py  llm_modelhandler.py  lmstudio_modelhandler.py  local_modelhandler.py  modelhandler.py  promptguard.py  spacy_modelhandler.py  transformers_modelhandler.py  utils.py
langtest/pipelines/: benchmark.py  constant.py  embedding.py  pipeline.py  transformers_pipelines.py
langtest/tasks/: __init__.py  task.py
langtest/transform/: __init__.py  accuracy.py  base.py  bias.py  clinical.py  comparsionpy  custom_bias.py  custom_data.py  disinformation.py  factuality.py  fairness.py  grammar.py  grammer.py  ideology.py  legal.py  measure.py  performance.py  political.py  representation.py  robustness.py  safety.py  security.py  sensitivity.py  stereoset.py  stereotype.py  sycophancy.py  toxicity.py  utils.py
langtest/utils/: SentenceTransformer.py  SoundsLikeFunctions.py  benchmark_utils.py  checkpoints.py  config_utils.py  gender_classifier.py  hf_model_n_tokenizer.py  hf_utils.py  lib_manager.py  number_to_word.py  report_utils.py  util_metrics.py
legacy-nlptest/: __init__.py
legacy-nlptest/bias/: bias_testing.py
legacy-nlptest/example/: Automated_Robustness_Testing_Spark_NLP.ipynb
legacy-nlptest/handlers/: datahandler.py
legacy-nlptest/noisy_labels/: noisy_label_testing.py
manual_tests/: test_llms.py
nlptest/: __init__.py  nlptest.py  testrunner.py  utils.py
nlptest_redesign/: setup.py
sphinx/: Makefile  README.md  api.rst  conf.py  index.rst  move_folders_for_building_website.sh  quick_start.rst  sphinx_requirements.txt
sphinx_docs/: api.rst  conf.py  index.rst
tests/: README.md  conftest.py  test_HuggingfaceEmbeddings.py  test_accuracy.py  test_all.py  test_augmentation.py  test_bias.py  test_crowspairs.py  test_data_augmenter.py  test_datasource.py  test_embedding_distance.py  test_embeddings.py  test_fairness.py  test_gender_classifier.py  test_grammer.py  test_harness.py  test_huggingface_model.py  test_image_robustness.py  test_mlflow.py  test_modelhandler.py  test_nlp_tasks.py  test_performance.py  test_perturbation.py  test_pipeline.py  test_representation.py  test_robustness.py  test_robustness_testing.py  test_sample.py  test_sensitivity.py  test_spacy_model.py  test_sparknlp_model.py  test_stereoset.py  test_string_distance.py  test_sycophancy.py  test_translation.py  test_winobias.py
(+2166 files in other folders)
