[tool.poetry]
name = "langtest"
version = "2.0.0"
description = "John Snow Labs provides a library for delivering safe & effective NLP models."
authors = ["John Snow Labs <support@johnsnowlabs.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = "Apache-2.0"
homepage = "https://www.langtest.org"
repository = "https://github.com/JohnSnowLabs/langtest/"
documentation = "https://langtest.org/docs/pages/docs/install"
keywords = [
    "NLP",
    "testing",
    "robustness",
    "bias",
    "fairness",
    "representation",
    "accuracy"
]
exclude = [
    "tests/"
]

[tool.flake8]
max-line-length = 90
ignore = "E203,E501,W503"
per-file-ignores = '__init__.py:F401'

[tool.black]
line-length = 90
extend-exclude = "langtest/transform/constants.py"
exclude = 'langtest/errors.py'

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pydantic = "1.10.6"
johnsnowlabs = { version = "4.3.5", optional = true }
rouge-score = { version = "^0.1.2", optional = true }
evaluate = { version = "^0.4.0", optional = true }
transformers = "^4.38.2"
huggingface_hub = { version = ">0.16.0", optional = true}
spacy = { version = ">=3.0.0", optional = true }
nest-asyncio = "^1.5.0"
openai = {version = "^1.13.3", optional = true}
jsonlines = "^3.1.0"
torch = { version = "^2.0.0", optional = true }
pandas = "^2.0.3"
pyyaml = "^6.0"
tqdm = "^4.65.0"
cohere = { version = "^4.10.0", optional = true}
ai21 = {version = "^1.1.0", optional = true}
metaflow = {version = ">=2.9.0", optional = true}
accelerate = {version = "<0.21.0", optional = true}
seqeval = {version = "^1.2.0", optional = true}
mlflow = {version = "^2.11.0", optional = true}
datasets = {version = ">=2.14.0", optional = true}
matplotlib = {version = "^3.7.2", optional = true}
tenacity = {version = "^8.2.2", optional = true}
langchain = {version = "^0.1.11", optional = true}
typing-extensions = "^4.10.0"

[tool.poetry.extras]
transformers = ["transformers", "torch", "accelerate", "datasets"]
evaluate = ["evaluate", "rouge-score", "seqeval"]
spacy = ["spacy"]
langchain = ["langchain"]
johnsnowlabs = ["johnsnowlabs"]
openai = ["openai", "langchain"]
cohere = ["cohere", "langchain"]
ai21 = ["ai21", "langchain"]
huggingface_hub = ["huggingface_hub", "langchain"]
metaflow = ["metaflow"]
mlflow = ["mlflow"]
datasets = ["datasets"]
matplotlib = ["matplotlib"]

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pytest = "^7.4.0"
taskipy = "^1.11.0"
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz" }
black = "^23.3.0"
pyproject-flake8 = "<6.0.0"
pre-commit = "^3.3.3"
pydocstyle = "^6.3.0"

[tool.taskipy.tasks]
test = "pytest tests/* -v --disable-warnings"
lint = "pflake8 langtest/"
format = "black langtest/ tests/"
check-docstrings = "pydocstyle langtest/ --add-select=D417 --add-ignore=D100,D104,D105,D400,D415 --convention=google"
is-formatted = "black --check langtest/ tests/"
force-cpu-torch = "python -m pip install torch==2.1.2 --index-url https://download.pytorch.org/whl/cpu"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"